--- a/stack_cloudformation/vpc/izybe_vpc_dev.yaml
+++ b/stack_cloudformation/vpc/izybe_vpc_dev.yaml
@@ -3,13 +3,13 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   AWS CloudFormation VPC Template
 Resources:
-  ReviewVpcDev:
+  IzybeVpcDev:
     Type: 'AWS::EC2::VPC'
     Properties:
       CidrBlock: 10.0.0.0/16
       Tags:
         - Key: Name
-          Value: 'ReviewVpcDev'
+          Value: 'IzybeVpcDev'
   SubnetPrivateA:
     Type: AWS::EC2::Subnet
     Properties:
@@ -17,12 +17,12 @@ Resources:
       #!Select to get any element of a tab
       #!Cidr to divide ranges in subdiv
       #!GetAtt to collect a resource in cloudformation
-      #CidrBlock: !Select [ 0, !Cidr [ !GetAtt ReviewVpcDev.CidrBlock, 1, 8 ]]
+      #CidrBlock: !Select [ 0, !Cidr [ !GetAtt IzybeVpcDev.CidrBlock, 1, 8 ]]
       CidrBlock: 10.0.0.0/24
       Tags:
         - Key: Name
-          Value: 'ReviewVpcDev-subnet-private-a'
-      VpcId: !Ref ReviewVpcDev 
+          Value: 'IzybeVpcDev-subnet-private-a'
+      VpcId: !Ref IzybeVpcDev 
   SubnetPublicA:
     Type: AWS::EC2::Subnet
     Properties:
@@ -30,18 +30,18 @@ Resources:
       CidrBlock: 10.0.100.0/24
       Tags:
         - Key: Name
-          Value: 'ReviewVpcDev-subnet-public-a'
-      VpcId: !Ref ReviewVpcDev
+          Value: 'IzybeVpcDev-subnet-public-a'
+      VpcId: !Ref IzybeVpcDev
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties: 
       Tags:
         - Key: Name
-          Value: 'ReviewVpcDev-internet-gw'
+          Value: 'IzybeVpcDev-internet-gw'
   AttachInternetGateway:
     Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
-      VpcId: !Ref ReviewVpcDev
+      VpcId: !Ref IzybeVpcDev
       InternetGatewayId: !Ref InternetGateway
   ElasticIpA:
     Type: AWS::EC2::EIP
@@ -55,14 +55,14 @@ Resources:
       SubnetId: !Ref SubnetPrivateA
       Tags:
         - Key: Name
-          Value: ReviewVpcDev-nat-gw-a
+          Value: IzybeVpcDev-nat-gw-a
   RouteTablePrivateA:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref ReviewVpcDev
+      VpcId: !Ref IzybeVpcDev
       Tags:
       - Key: Name
-        Value: ReviewVpcDev-rtb-private-a
+        Value: IzybeVpcDev-rtb-private-a
   AttachRouteTablePrivateA:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -78,10 +78,10 @@ Resources:
   RouteTablePublicA:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref ReviewVpcDev
+      VpcId: !Ref IzybeVpcDev
       Tags:
       - Key: Name
-        Value: ReviewVpcDev-rtb-public-a
+        Value: IzybeVpcDev-rtb-public-a
   AttachRoutablePublicA:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
